- added missing organizer contact field in create_event page - show event(homepage) for admin now fully working (only show event created by logged in admin) - update event for admin now fully working (Choose Event field now only show event that owned by logged in admin)

--- a/view/create_event.html
+++ b/view/create_event.html
@@ -93,6 +93,16 @@
 			<br>
 			<br>
 
+			<label> ORGANIZER CONTACT: *
+				<input type="text" placeholder="012-3456789"
+					   name="organizerCon"/>
+				(Enter organizer conact/company contact)
+
+			</label>
+
+			<br>
+			<br>
+
 			<!--<h1>2.CREATE TICKETS</h1>-->
 			<!--<h2>Ticket Type:</h2>-->
 			<!--<select title="ticket_type">-->
