- update contact field added in update_event - view event for admin and user is now separated - re-organizing the folder

--- a/view/event/browse.html
+++ b/view/event/browse.html
@@ -3,14 +3,24 @@
     <head>
         <meta charset="UTF-8">
         <title>Browse Event</title>
-        <link rel="stylesheet" href="../../style/event/browse.css">
         <script type="text/javascript" src="../../controller/library/jquery-3.2.1.min.js"></script>
-        <link rel="stylesheet" href="css/responsive.css" media="screen and (max-width: 900px)" />
+        <script type="text/javascript" src="../../controller/cookie/cookie.js"></script>
+        <script type="text/javascript" src="../../controller/others/ssFunction.js"></script>
+        <script type="text/javascript" src="../../controller/others/menuIcon.js"></script>
+        <script type="text/javascript" src="../../controller/cookie/cookie.js"></script>
+
+        <link rel="stylesheet" href="../../style/event/browse.css" />
+        <link rel="stylesheet" href="../../style/others/global_nav.css" />
+        <link rel="stylesheet" href="../../style/others/responsive.css" media="screen and (max-width: 900px)" />
     </head>
     <body>
-        <div class="browse_container">
-                <script language="javascript" type="text/javascript" src="js/getEventInfo.js"></script>
+        <div class="nav_container">
+            <script language="javascript" type="text/javascript" src="../../controller/navigation_bar/nav_bar_user.js"></script>
         </div>
+        <div class="browse_container">
+                <script language="javascript" type="text/javascript" src="../../controller/event/getEventInfo.js"></script>
+        </div>
+
 
         <!--<div class="browse_container">-->
             <!--<div class="browse_box">-->
