--- a/view/event/update_event.html
+++ b/view/event/update_event.html
@@ -6,11 +6,17 @@
 		<meta charset="utf-8">
 		<title>Welcome to update event function.</title>
 		<script type="text/javascript" src="../../controller/library/jquery-3.2.1.min.js"></script>
-		<script type="text/javascript" src="js/connect.js"></script>
-		<link rel="stylesheet" href="css/crenupdevent.css">
+		<script type="text/javascript" src="../../controller/cookie/cookie.js"></script>
+		<script type="text/javascript" src="../../controller/others/connect.js"></script>
+		<script type="text/javascript" src="../../controller/others/menuIcon.js"></script>
+		<link rel="stylesheet" href="../../style/others/global_nav.css" />
+		<link rel="stylesheet" href="../../style/event/cr_up_event.css">
 	</head>
 
 	<body>
+		<div class="nav_container">
+			<script language="javascript" type="text/javascript" src="../../controller/navigation_bar/nav_bar_admin.js"></script>
+		</div>
 
     <div id="page-wrap1">
 	<h2 id="response"></h2>
@@ -19,11 +25,11 @@
 
 	<br>
 
-	<form id="eventForm" name="CreateEvent" action="php/update_event.php" method="post" >
+	<form id="eventForm" name="CreateEvent" action="../../model/event/update_event.php" method="post" >
 		<div>
 			<label> CHOOSE EVENT:*
 				<select name="eventID" class="eNameList">
-					<script language="javascript" type="text/javascript" src="js/loadEventID.js"></script>
+					<script language="javascript" type="text/javascript" src="../../controller/event/loadEventID.js"></script>
 				</select>
 				(Choose the event you want to update.)
 
@@ -97,6 +103,16 @@
 			<br>
 			<br>
 
+			<label> ORGANIZER CONTACT: *
+				<input type="text" placeholder="012-3456789"
+					   name="organizerCon"/>
+				(Enter organizer conact/company contact)
+
+			</label>
+
+			<br>
+			<br>
+
 			<!--<h1>2.CREATE TICKETS</h1>-->
 			<!--<h2>Ticket Type:</h2>-->
 			<!--<select title="ticket_type">-->
@@ -126,8 +142,8 @@
 	</form>
 
     </div>
-    <div id="bg2">
-        <img src="resource/backg.jpg" alt="">
+    <div id="bg">
+        <img src="../../drawable/backg.jpg" alt="">
     </div>
 
 	</body>
