--- a/view/index.html
+++ b/view/index.html
@@ -5,13 +5,13 @@
         <title>Event Management</title>
 
         <!--CSS-->
-        <link rel="stylesheet" href="../style/global_nav.css" />
+        <link rel="stylesheet" href="../style/others/global_nav.css" />
         <!--this means if screen max width less than 900px, use this CSS-->
-        <link rel="stylesheet" href="../style/responsive.css" media="screen and (max-width: 900px)" />
+        <link rel="stylesheet" href="../style/others/responsive.css" media="screen and (max-width: 900px)" />
 
         <!--javascript-->
-        <script type="text/javascript" src="../controller/jquery-3.2.1.min.js"></script>
-        <script type="text/javascript" src="../controller/menuIcon.js"></script>
+        <script type="text/javascript" src="../controller/library/jquery-3.2.1.min.js"></script>
+        <script type="text/javascript" src="../controller/others/menuIcon.js"></script>
     </head>
     <body>
 
