--- a/view/login/login.html
+++ b/view/login/login.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script|Questrial|Roboto" rel="stylesheet">
 
     <!--Use Google CDN Jquery script for easier integration test -->
-    <script type="text/javascript" src="../../controller/jquery-3.2.1.min.js"></script>
+    <script type="text/javascript" src="../../controller/library/jquery-3.2.1.min.js"></script>
 
     <!-- Cookies -->
     <script type="text/javascript" src="../../controller/cookie/cookie.js"></script>
