--- a/view/register/register.html
+++ b/view/register/register.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script|Questrial|Roboto" rel="stylesheet">
 
     <!--Use Google CDN Jquery script for easier integration test -->
-    <script type="text/javascript" src="../../controller/jquery-3.2.1.min.js"></script>
+    <script type="text/javascript" src="../../controller/library/jquery-3.2.1.min.js"></script>
     <script type="text/javascript" src="../../controller/register/register.js"></script>
 
 <body>
@@ -23,11 +23,11 @@
         </label>
 
         <label>
-            <span class="fontStyle">Password</span><input type="password" id="password" name="password" placeholder="At least 8 characters with uppercase, lowercase and numbers"required>
+            <span class="fontStyle">Password</span><input type="password" id="password" name="password" placeholder="At least 8 characters with uppercase, lowercase and numbers" required>
         </label>
 
         <label>
-            <span class="fontStyle">Retype-Password</span> <input type="password" id="retypePassword" name="retypePassword" placeholder="Match the password"required>
+            <span class="fontStyle">Retype-Password</span> <input type="password" id="retypePassword" name="retypePassword" placeholder="Match the password" required>
         </label>
 
         <label>
