--- a/view/login/logout.html
+++ b/view/login/logout.html
@@ -5,7 +5,7 @@
     <title>Login Success</title>
 
     <!-- Cookies -->
-    <script type="text/javascript" src="../../cookie.js"></script>
+    <script type="text/javascript" src="../../controller/cookie/cookie.js"></script>
     <script>
 
         function getCookie(){
@@ -17,7 +17,7 @@
         function removeCookies() {
             Cookies.remove('name');
             Cookies.remove('password');
-            window.location.replace("../../view/login/login.html")
+            window.location.replace(".login.html")
         }
     </script>
 </head>
@@ -40,7 +40,7 @@
 
     <p>Login Successful</p>
 
-    <button onclick="removeCookies()" href="../view/login/login.html">Sign out</button>
+    <button onclick="removeCookies()" href="login.html">Sign out</button>
     <button onclick="getCookie()">Retrieve Session</button>
 
 </body>
