- viewport added to fix mobile browser @media doesn't work

--- a/view/about/about.html
+++ b/view/about/about.html
@@ -1,64 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>This is about page</title>
-        <script type="text/javascript" src="../../controller/library/jquery-3.2.1.min.js"></script>
-        <script type="text/javascript" src="../../controller/cookie/cookie.js"></script>
-        <script type="text/javascript" src="../../controller/others/menuIcon.js"></script>
-        <link rel="stylesheet" href="../../style/others/global_nav.css" />
-        <link rel="stylesheet" href="../../style/others/about_page.css">
+<head>
+    <!--meta-->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    </head>
+    <!--webpage title-->
+    <title>About</title>
 
-    <body>
-    <div class="nav_container">
-        <script language="javascript" type="text/javascript" src="../../controller/navigation_bar/nav_bar_user.js"></script>
-    </div>
-    <div id="page-wrap2">
-        <!--<div id="signin">-->
-            <!--<a href="#">Sign In</a>-->
-        <!--</div>-->
+    <!--javascript-->
+    <script type="text/javascript" src="../../controller/library/jquery-3.2.1.min.js"></script>
+    <script type="text/javascript" src="../../controller/cookie/cookie.js"></script>
+    <script type="text/javascript" src="../../controller/others/menuIcon.js"></script>
 
-        <h1>About us</h1>
-        <br>
-        <br>
+    <!--stylesheet-->
+    <link rel="stylesheet" href="../../style/others/global_nav.css" />
+    <link rel="stylesheet" href="../../style/others/about_page.css">
+</head>
 
-        <h3>This is a website can help you arrange your time with different event.
-            You could customize your own event via our website. Each person may create
-            up to 100 events in each account. What are you waiting for?
-            Sign up and create your event now!</h3>
+<body>
+<div class="nav_container">
+    <script language="javascript" type="text/javascript" src="../../controller/navigation_bar/nav_bar_user.js"></script>
+</div>
+<div id="page-wrap2">
+    <!--<div id="signin">-->
+    <!--<a href="#">Sign In</a>-->
+    <!--</div>-->
 
-        <h3>You can customize your own event description to really sell your event and tell people the most
-            important information they need to know. Make sure to include a detailed description, include
-            contact information. From your event's Edit page, locate the "Event Description" section under
-           Create Event there. Start yor journey now!</h3>
+    <h1>About us</h1>
+    <br>
+    <br>
 
-        <br>
-        <br>
+    <h3>This is a website can help you arrange your time with different event.
+        You could customize your own event via our website. Each person may create
+        up to 100 events in each account. What are you waiting for?
+        Sign up and create your event now!</h3>
 
-        <!--<div id="Cevent">-->
-        <!--<a href="http://localhost:63342/WebAppAssignment/others/jiale/createevent.html?_ijt=4firmfd20g0r318hl49h6e4k65">-->
-            <!--Create event now.</a>-->
-        <!--</div>-->
+    <h3>You can customize your own event description to really sell your event and tell people the most
+        important information they need to know. Make sure to include a detailed description, include
+        contact information. From your event's Edit page, locate the "Event Description" section under
+        Create Event there. Start yor journey now!</h3>
 
-        <br>
-        <br>
+    <br>
+    <br>
 
-        <h1>Our team members</h1>
+    <!--<div id="Cevent">-->
+    <!--<a href="http://localhost:63342/WebAppAssignment/others/jiale/createevent.html?_ijt=4firmfd20g0r318hl49h6e4k65">-->
+    <!--Create event now.</a>-->
+    <!--</div>-->
 
-        <br>
-        <br>
+    <br>
+    <br>
 
-        <p>Chai Ying Hua</p>
-        <p>Kiat Jia Le</p>
-        <p>Cheong Gwen Yit</p>
-        <p>Ong Choon Kit</p>
+    <h1>Our team members</h1>
 
-        </div>
+    <br>
+    <br>
 
-        <div id="bg2">
-            <img src="../../drawable/bgbg2.jpg" alt="">
-        </div>
-    </body>
+    <p>Chai Ying Hua</p>
+    <p>Kiat Jia Le</p>
+    <p>Cheong Gwen Yit</p>
+    <p>Ong Choon Kit</p>
+
+</div>
+
+<div id="bg2">
+    <img src="../../drawable/bgbg2.jpg" alt="">
+</div>
+</body>
 </html>
