--- a/view/about/about_.html
+++ b/view/about/about_.html
@@ -1,14 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!--meta-->
     <meta charset="UTF-8">
-    <title>This is about page</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!--webpage title-->
+    <title>About</title>
+
+    <!--javascript-->
     <script type="text/javascript" src="../../controller/library/jquery-3.2.1.min.js"></script>
     <script type="text/javascript" src="../../controller/cookie/cookie.js"></script>
     <script type="text/javascript" src="../../controller/others/menuIcon.js"></script>
+
+    <!--stylesheet-->
     <link rel="stylesheet" href="../../style/others/global_nav.css" />
     <link rel="stylesheet" href="../../style/others/about_page.css">
-
 </head>
 
 <body>
