--- a/view/event/update_event.html
+++ b/view/event/update_event.html
@@ -1,24 +1,30 @@
 <!DOCTYPE html>
-
 <html>
+<head>
+	<!--meta-->
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<head>
-		<meta charset="utf-8">
-		<title>Welcome to update event function.</title>
-		<script type="text/javascript" src="../../controller/library/jquery-3.2.1.min.js"></script>
-		<script type="text/javascript" src="../../controller/cookie/cookie.js"></script>
-		<script type="text/javascript" src="../../controller/others/connect.js"></script>
-		<script type="text/javascript" src="../../controller/others/menuIcon.js"></script>
-		<link rel="stylesheet" href="../../style/others/global_nav.css" />
-		<link rel="stylesheet" href="../../style/event/cr_up_event.css">
-	</head>
+	<!--webpage title-->
+	<title>Welcome to update event function.</title>
 
-	<body>
-		<div class="nav_container">
-			<script language="javascript" type="text/javascript" src="../../controller/navigation_bar/nav_bar_admin.js"></script>
-		</div>
+	<!--javascript-->
+	<script type="text/javascript" src="../../controller/library/jquery-3.2.1.min.js"></script>
+	<script type="text/javascript" src="../../controller/cookie/cookie.js"></script>
+	<script type="text/javascript" src="../../controller/others/connect.js"></script>
+	<script type="text/javascript" src="../../controller/others/menuIcon.js"></script>
 
-    <div id="page-wrap1">
+	<!--stylesheet-->
+	<link rel="stylesheet" href="../../style/others/global_nav.css" />
+	<link rel="stylesheet" href="../../style/event/cr_up_event.css">
+</head>
+
+<body>
+<div class="nav_container">
+	<script language="javascript" type="text/javascript" src="../../controller/navigation_bar/nav_bar_admin.js"></script>
+</div>
+
+<div id="page-wrap1">
 	<h2 id="response"></h2>
 	<h1>Update An Event</h1>
 	<h2>1. EVENT DETAILS</h2>
@@ -141,11 +147,10 @@
 		</div>
 	</form>
 
-    </div>
-    <div id="bg">
-        <img src="../../drawable/backg.jpg" alt="">
-    </div>
+</div>
+<div id="bg">
+	<img src="../../drawable/backg.jpg" alt="">
+</div>
 
-	</body>
-
+</body>
 </html>
