--- a/view/login/login.html
+++ b/view/login/login.html
@@ -1,8 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!--meta-->
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!--webpage title-->
     <title>Log In</title>
+
+    <!--stylesheet-->
     <link rel="stylesheet" type="text/css" href="../../style/app/app.css">
     <link rel="stylesheet" type="text/css" href="../../style/login/login.css">
 
