--- a/view/event/create_event.html
+++ b/view/event/create_event.html
@@ -1,38 +1,43 @@
 <!DOCTYPE html>
-
 <html>
+<head>
+	<!--meta-->
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<head>
+	<!--webpage title-->
+	<title>Welcome to create event function.</title>
 
-		<meta charset="utf-8">
-		<title>Welcome to create event function.</title>
-        <script type="text/javascript" src="../../controller/library/jquery-3.2.1.min.js"></script>
-		<script type="text/javascript" src="../../controller/cookie/cookie.js"></script>
-        <script type="text/javascript" src="../../controller/others/connect.js"></script>
-		<script type="text/javascript" src="../../controller/others/menuIcon.js"></script>
-		<link rel="stylesheet" href="../../style/others/global_nav.css" />
-		<link rel="stylesheet" href="../../style/event/cr_up_event.css">
-	</head>
+	<!--javascript-->
+	<script type="text/javascript" src="../../controller/library/jquery-3.2.1.min.js"></script>
+	<script type="text/javascript" src="../../controller/cookie/cookie.js"></script>
+	<script type="text/javascript" src="../../controller/others/connect.js"></script>
+	<script type="text/javascript" src="../../controller/others/menuIcon.js"></script>
 
-	<body>
-		<div class="nav_container">
-			<script language="javascript" type="text/javascript" src="../../controller/navigation_bar/nav_bar_admin.js"></script>
-		</div>
+	<!--stylesheet-->
+	<link rel="stylesheet" href="../../style/others/global_nav.css" />
+	<link rel="stylesheet" href="../../style/event/cr_up_event.css">
+</head>
 
-		<div id="page-wrap1">
-        <h2 id="response"></h2>
-		<h1>Create An Event</h1>
-		<h2>1. EVENT DETAILS</h2>
+<body>
+<div class="nav_container">
+	<script language="javascript" type="text/javascript" src="../../controller/navigation_bar/nav_bar_admin.js"></script>
+</div>
 
-		<br>
+<div id="page-wrap1">
+	<h2 id="response"></h2>
+	<h1>Create An Event</h1>
+	<h2>1. EVENT DETAILS</h2>
 
-		<form id="eventForm" name="CreateEvent" action="../../model/event/create_event.php" method="post" >
-			<div>
+	<br>
+
+	<form id="eventForm" name="CreateEvent" action="../../model/event/create_event.php" method="post" >
+		<div>
 			<label> EVENT NAME:*
 				<input type="text" placeholder="MMU Event"
 					   name="eventName"/>
-					   (Enter a short distinct name.)
-				
+				(Enter a short distinct name.)
+
 			</label>
 
 			<br>
@@ -41,8 +46,8 @@
 			<label> LOCATION:*
 				<input type="text" placeholder="MMU"
 					   name="locate"/>
-					   (Enter a short distinct of address.)
-				
+				(Enter a short distinct of address.)
+
 			</label>
 
 			<br>
@@ -50,24 +55,24 @@
 
 			<label> (From) DATE AND TIME:
 				<input type="datetime-local"
-				name="dtS"/>
+					   name="dtS"/>
 			</label>
 
-            <br>
-            <br>
+			<br>
+			<br>
 
 			<label> (To) DATE AND TIME:
 				<input type="datetime-local"
-				name="dtE"/>
+					   name="dtE"/>
 			</label>
 
 			<br>
 			<br>
 
 			<!--<form action="#">-->
-				  <!--<input type="file" name="pic" accept="image/*">-->
-				  <!--<br>-->
-				  <!--(We recommend using high pixel pictures to prevent unclear of the picture.)-->
+			<!--<input type="file" name="pic" accept="image/*">-->
+			<!--<br>-->
+			<!--(We recommend using high pixel pictures to prevent unclear of the picture.)-->
 			<!--</form>-->
 
 			<!--<br>-->
@@ -76,8 +81,8 @@
 			<label> DESCRIPTION: *
 				<input type="text" placeholder="This is an event about..."
 					   name="description"/>
-					   (Enter some short description.)
-				
+				(Enter some short description.)
+
 			</label>
 
 			<br>
@@ -86,8 +91,8 @@
 			<label> ORGANIZER NAME: *
 				<input type="text" placeholder="SocialClub Malaysia"
 					   name="organizerName"/>
-					   (Enter organizer name/company name)
-				
+				(Enter organizer name/company name)
+
 			</label>
 
 			<br>
@@ -106,9 +111,9 @@
 			<!--<h1>2.CREATE TICKETS</h1>-->
 			<!--<h2>Ticket Type:</h2>-->
 			<!--<select title="ticket_type">-->
-			  <!--<option value="FreeTicket">FreeTicket</option>-->
-			  <!--<option value="PaidTicket">PaidTicket</option>-->
-			  <!--<option value="Donation">Donation</option>-->
+			<!--<option value="FreeTicket">FreeTicket</option>-->
+			<!--<option value="PaidTicket">PaidTicket</option>-->
+			<!--<option value="Donation">Donation</option>-->
 			<!--</select>-->
 
 			<!--<br>-->
@@ -117,24 +122,24 @@
 			<!--<h1>3. ADDITIONAL SETTINGS</h1>-->
 			<!--<h2>Show Remaining Tickets:</h2>-->
 
-            <!--<label> Ticket numbers: *-->
-                <!--<input type="text" placeholder="50/100/..."-->
-                       <!--name="Ticket numbers"/>-->
-                <!--(Set the quantity of tickets you want)-->
+			<!--<label> Ticket numbers: *-->
+			<!--<input type="text" placeholder="50/100/..."-->
+			<!--name="Ticket numbers"/>-->
+			<!--(Set the quantity of tickets you want)-->
 
-            <!--</label>-->
+			<!--</label>-->
 
-				<!--<br>-->
-				<!--<br>-->
+			<!--<br>-->
+			<!--<br>-->
 
-				<input type="submit" value="create">
-            </div>
-        </form>
+			<input type="submit" value="create">
 		</div>
+	</form>
+</div>
 
-		<div id="bg">
-			<img src="../../drawable/backg.jpg" alt="">
-		</div>
-	</body>
+<div id="bg">
+	<img src="../../drawable/backg.jpg" alt="">
+</div>
+</body>
 
 </html>
