--- a/view/event/event_list.html
+++ b/view/event/event_list.html
@@ -1,23 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>Event List</title>
-        <script type="text/javascript" src="../../controller/library/jquery-3.2.1.min.js"></script>
-        <script type="text/javascript" src="../../controller/cookie/cookie.js"></script>
-        <script type="text/javascript" src="../../controller/others/menuIcon.js"></script>
-        <script type="text/javascript" src="../../controller/others/ssFunction.js"></script>
+<head>
+    <!--meta-->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <link rel="stylesheet" href="../../style/event/event_list.css" />
-        <link rel="stylesheet" href="../../style/others/global_nav.css" />
-        <link rel="stylesheet" href="../../style/others/responsive.css" media="screen and (max-width: 900px)" />
-    </head>
-    <body>
-        <div class="nav_container">
-            <script language="javascript" type="text/javascript" src="../../controller/navigation_bar/nav_bar_admin.js"></script>
-        </div>
-        <div class="browse_container">
-            <script language="javascript" type="text/javascript" src="../../controller/event/eventList.js"></script>
-        </div>
-    </body>
+    <!--webpage title-->
+    <title>Event List</title>
+
+    <!--javascript-->
+    <script type="text/javascript" src="../../controller/library/jquery-3.2.1.min.js"></script>
+    <script type="text/javascript" src="../../controller/cookie/cookie.js"></script>
+    <script type="text/javascript" src="../../controller/others/menuIcon.js"></script>
+    <script type="text/javascript" src="../../controller/others/ssFunction.js"></script>
+
+    <!--stylesheet-->
+    <link rel="stylesheet" href="../../style/event/event_list.css" />
+    <link rel="stylesheet" href="../../style/others/global_nav.css" />
+    <link rel="stylesheet" href="../../style/others/responsive.css" media="screen and (max-width: 900px)" />
+</head>
+<body>
+<div class="nav_container">
+    <script language="javascript" type="text/javascript" src="../../controller/navigation_bar/nav_bar_admin.js"></script>
+</div>
+<div class="browse_container">
+    <script language="javascript" type="text/javascript" src="../../controller/event/eventList.js"></script>
+</div>
+</body>
 </html>
