--- a/view/event/view_event.html
+++ b/view/event/view_event.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
 <html>
-
 <head>
-	<meta charset="utf-8">
+	<!--meta-->
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 
+	<!--webpage title-->
 	<title>Demo Retrieval</title>
+
+	<!--javascript-->
 	<script type="text/javascript" src="../../controller/library/jquery-3.2.1.min.js"></script>
 	<script type="text/javascript" src="../../controller/cookie/cookie.js"></script>
 	<script type="text/javascript" src="../../controller/others/menuIcon.js"></script>
+
+	<!--stylesheet-->
 	<link rel="stylesheet" href="../../style/event/view_event.css" />
 	<link rel="stylesheet" href="../../style/others/global_nav.css" />
 	<link rel="stylesheet" href="../../style/others/responsive.css" media="screen and (max-width: 900px)" />
@@ -26,5 +32,4 @@
 	<img src="../../drawable/heh.jpg" alt="">
 </div>
 </body>
-
 </html>
