--- a/view/register/register.html
+++ b/view/register/register.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!--meta-->
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!--webpage title-->
     <title>Register</title>
     <link rel="stylesheet" type="text/css" href="../../style/app/app.css">
     <link rel="stylesheet" type="text/css" href="../../style/register/register.css">
