--- a/view/ticket/apply.html
+++ b/view/ticket/apply.html
@@ -1,19 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>Apply for Ticket?</title>
-        <script type="text/javascript" src="../../controller/library/jquery-3.2.1.min.js"></script>
-        <!--<script type="text/javascript" src="js/createTicket.js"></script>-->
-    </head>
-    <body>
-        <div class="applyForm">
-            <script language="javascript" type="text/javascript" src="../../controller/ticket/createTicket.js"></script>
-            <!--Are you sure you want to apply ticket for this event?-->
-            <!--<form id = "applyYN" action="../model/create_ticket.php" method="post">-->
-                <!--<input type="submit"   name = "backHome" value="no">-->
-                <!--<input type="submit" name = "createTic" value="yes">-->
-            <!--</form>-->
-        </div>
-    </body>
+<head>
+    <!--meta-->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!--webpage title-->
+    <title>Apply for Ticket?</title>
+
+    <!--javascript-->
+    <script type="text/javascript" src="../../controller/library/jquery-3.2.1.min.js"></script>
+    <!--<script type="text/javascript" src="js/createTicket.js"></script>-->
+</head>
+<body>
+    <div class="applyForm">
+        <script language="javascript" type="text/javascript" src="../../controller/ticket/createTicket.js"></script>
+        <!--Are you sure you want to apply ticket for this event?-->
+        <!--<form id = "applyYN" action="../model/create_ticket.php" method="post">-->
+            <!--<input type="submit"   name = "backHome" value="no">-->
+            <!--<input type="submit" name = "createTic" value="yes">-->
+        <!--</form>-->
+    </div>
+</body>
 </html>
