--- a/view/ticket/apply.html
+++ b/view/ticket/apply.html
@@ -10,7 +10,10 @@
 
     <!--javascript-->
     <script type="text/javascript" src="../../controller/library/jquery-3.2.1.min.js"></script>
-    <!--<script type="text/javascript" src="js/createTicket.js"></script>-->
+
+    <!--stylesheet-->
+    <link rel="stylesheet" href="../../style/ticket/view_ticket.css">
+    <link rel="stylesheet" href="../../style/others/responsive.css" media="screen and (max-width: 900px)" />
 </head>
 <body>
     <div class="applyForm">
