--- a/style/event/cr_up_event.css
+++ b/style/event/cr_up_event.css
@@ -21,7 +21,8 @@
 #page-wrap1 {
     position: relative;
     z-index: 1;
-    width: 1000px;
+    width: 80%;
+    height: auto;
     margin: 50px auto;
     padding: 20px;
     background: #C3F5F7;
@@ -65,6 +66,7 @@ label {
     font-family: "Berlin Sans FB", sans-serif;
     display: block;
     float: left;
+    padding: 10px;
 }
 
 h1{
