--- a/style/others/responsive.css
+++ b/style/others/responsive.css
@@ -51,8 +51,17 @@
 
 /*view event*/
 @media screen and (max-width:650px) {
-    #page-wrap{
+    #page-wrap {
         flex-direction: column-reverse;
         align-items: center;
+    }
+
+    #page-wrap2 {
+        align-items: center;
+        text-align: center;
+    }
+
+    .evt_box_left, .evt_box_right{
+        text-align: center;
     }
 }
