--- a/style/ticket/view_ticket.css
+++ b/style/ticket/view_ticket.css
@@ -28,3 +28,14 @@ input.tix_info {
     border-radius: 10px;
     font-weight: bold;
 }
+
+.applyForm {
+    border: 2px solid black;
+    padding: 10px;
+    -webkit-border-radius: 5px;
+    border-radius: 10px;
+    align-items: center;
+    text-align: center;
+    font-weight: bold;
+    background-color: #dedede;
+}
