--- a/view/about/about_.html
+++ b/view/about/about_.html
@@ -16,6 +16,7 @@
     <!--stylesheet-->
     <link rel="stylesheet" href="../../style/others/global_nav.css" />
     <link rel="stylesheet" href="../../style/others/about_page.css">
+    <link rel="stylesheet" href="../../style/others/responsive.css" media="screen and (max-width: 900px)" />
 </head>
 
 <body>
