--- a/view/event/update_event.html
+++ b/view/event/update_event.html
@@ -17,6 +17,7 @@
 	<!--stylesheet-->
 	<link rel="stylesheet" href="../../style/others/global_nav.css" />
 	<link rel="stylesheet" href="../../style/event/cr_up_event.css">
+	<link rel="stylesheet" href="../../style/others/responsive.css" media="screen and (max-width: 900px)" />
 </head>
 
 <body>
