--- a/view/event/browse.html
+++ b/view/event/browse.html
@@ -28,6 +28,9 @@
     <script language="javascript" type="text/javascript" src="../../controller/event/getEventInfo.js"></script>
 </div>
 
+<div id="bg">
+    <img src="../../drawable/backg.jpg" alt="">
+</div>
 
 <!--<div class="browse_container">-->
 <!--<div class="browse_box">-->
