--- a/view/event/event_list.html
+++ b/view/event/event_list.html
@@ -26,5 +26,10 @@
 <div class="browse_container">
     <script language="javascript" type="text/javascript" src="../../controller/event/eventList.js"></script>
 </div>
+
+<div id="bg">
+    <img src="../../drawable/backg.jpg" alt="">
+</div>
+
 </body>
 </html>
