--- a/view/ticket/view_ticket.html
+++ b/view/ticket/view_ticket.html
@@ -27,5 +27,10 @@
 <div class="view_container">
     <script language="javascript" type="text/javascript" src="../../controller/ticket/view_ticket.js"></script>
 </div>
+
+<div id="bg">
+    <img src="../../drawable/backg.jpg" alt="">
+</div>
+
 </body>
 </html>
