--- a/style/event/event_list.css
+++ b/style/event/event_list.css
@@ -10,7 +10,7 @@ div.browse_container {
     border: 3px solid grey;
     display: flex;
     justify-content: center;
-    background-color: #5485B0;
+    background-color: transparent;
     flex-wrap: wrap;
 }
 
