--- a/style/event/browse.css
+++ b/style/event/browse.css
@@ -18,12 +18,14 @@ div.browse_box {
     border: 5px solid black;
     background-color: #bab6cc;
     width: 430px;
-    height: 500px;
+    height: 520px;
     display: flex;
     justify-content: space-around;
     flex-direction: column;
     overflow: hidden;
     margin: 10px;
+    -webkit-border-radius: 5px;
+    border-radius: 15px;
 }
 
 div.cover_p {
