--- a/style/ticket/view_ticket.css
+++ b/style/ticket/view_ticket.css
@@ -1,10 +1,10 @@
 div.view_container {
     /*width: 450px;*/
     /*height: 500px;*/
-    border: 3px solid grey;
+    /*border: 3px solid grey;*/
     display: flex;
     justify-content: center;
-    background-color: #5485B0;
+    /*background-color: #5485B0;*/
     flex-wrap: wrap;
 }
 
@@ -18,6 +18,8 @@ div.view_box {
     flex-direction: column;
     overflow: hidden;
     margin: 10px;
+    -webkit-border-radius: 5px;
+    border-radius: 10px;
 }
 
 input.tix_info {
