- change footer z-index to highest among others - change doge pic

--- a/style/others/global_nav.css
+++ b/style/others/global_nav.css
@@ -131,6 +131,7 @@ div.nav_menu {
     background-color: #a6a6a6;
     color: white;
     text-align: center;
+    z-index: 2;
 }
 
 .clear_fix:before, .clear_fix:after { content: ""; display: table; }
