-change some design

--- a/view/about.html
+++ b/view/about.html
@@ -31,7 +31,7 @@
         <h3>You can customize your own event description to really sell your event and tell people the most
             important information they need to know. Make sure to include a detailed description, include
             contact information. From your event's Edit page, locate the "Event Description" section under
-           Create Event there. Start yor journey now!</h3>
+           Create Event there. Start your journey now!</h3>
 
         <br>
         <br>
