--- a/style/event/cr_up_event.css
+++ b/style/event/cr_up_event.css
@@ -1,7 +1,7 @@
 #page-wrap1 {
     position: relative;
     z-index: 1;
-    width: 80%;
+    width: 750px;
     height: auto;
     margin: 50px auto;
     padding: 20px;
