--- a/style/event/event_list.css
+++ b/style/event/event_list.css
@@ -7,7 +7,7 @@
 div.browse_container {
     /*width: 450px;*/
     /*height: 500px;*/
-    border: 3px solid grey;
+    /*border: 3px solid grey;*/
     display: flex;
     justify-content: center;
     background-color: transparent;
