- change login and register webpage css - login and register page css is now responsive

--- a/style/others/responsive.css
+++ b/style/others/responsive.css
@@ -61,8 +61,12 @@
         text-align: center;
     }
 
-    .evt_box_left, .evt_box_right{
+    .evt_box_left, .evt_box_right {
         text-align: center;
+    }
+
+    #loginForm {
+        width: 80%;
     }
 }
 
@@ -70,4 +74,6 @@
     #page-wrap1 {
         width: 80%;
     }
+
+
 }
