--- a/view/login/login.html
+++ b/view/login/login.html
@@ -11,6 +11,7 @@
     <!--stylesheet-->
     <link rel="stylesheet" type="text/css" href="../../style/app/app.css">
     <link rel="stylesheet" type="text/css" href="../../style/login/login.css">
+    <link rel="stylesheet" href="../../style/others/responsive.css" media="screen and (max-width: 900px)" />
 
     <!--Use Google Font -->
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script|Questrial|Roboto" rel="stylesheet">
