- change cancel button to login

--- a/view/register/register.html
+++ b/view/register/register.html
@@ -64,7 +64,9 @@
     </form>
 
     <form action="../login/login.html">
-        <button type="submit">Cancel</button>
+        <br>
+        <span class="fontStyle">Already have an account? </span>
+        <button type="submit">Login</button>
     </form>
 </div>
 
