change label of selection in login and register

--- a/view/login/login.html
+++ b/view/login/login.html
@@ -49,7 +49,7 @@
 
                     <select name="login_choice" id="role">
                         <option value="user">User</option>
-                        <option value="organizer">Organizer</option>
+                        <option value="organizer">Admin</option>
                     </select>
 
                     <p>Do not have an account? <a href="../register/register.html" style="color:darkblue"><b>Register Here</b></a></p>
