--- a/view/register/register.html
+++ b/view/register/register.html
@@ -53,7 +53,7 @@
         <span class="fontStyle">Register as </span>
         <select name="register_choice" id="role">
             <option value="user">User</option>
-            <option value="organizer">Organizer</option>
+            <option value="organizer">Admin</option>
         </select>
 
         <p class="warning_message" id="register_warning"></p>
