fix error message pop two times error

--- a/view/login/login.html
+++ b/view/login/login.html
@@ -27,7 +27,7 @@
 </head>
     <body>
     <div>
-        <form id="loginForm" method="get" onsubmit="return validation()">
+        <form id="loginForm" method="get" onsubmit="return validity.valueOf()">
             <div id="container">
 
                 <h2>Event Management System Login</h2>
