--- a/view/register/register.html
+++ b/view/register/register.html
@@ -14,7 +14,8 @@
     <link rel="stylesheet" href="../../style/others/responsive.css" media="screen and (max-width: 900px)" />
 
     <!--Use Google Font -->
-    <link href="../../style/library/Dancing+Script-Questrial-Roboto(google).css" rel="stylesheet">
+    <!--<link href="../../style/library/Dancing+Script-Questrial-Roboto(google).css" rel="stylesheet">-->
+    <link href="https://fonts.googleapis.com/css?family=Dancing+Script|Questrial|Roboto" rel="stylesheet">
 
     <!--Use Google CDN Jquery script for easier integration test -->
     <script type="text/javascript" src="../../controller/library/jquery-3.2.1.min.js"></script>
