- change login button to link in register page

--- a/view/register/register.html
+++ b/view/register/register.html
@@ -64,11 +64,11 @@
         <button type="submit" id="register">Register</button>
     </form>
 
-    <form action="../login/login.html">
+    <!--<form action="../login/login.html">-->
         <br>
-        <span class="fontStyle">Already have an account? </span>
-        <button type="submit">Login</button>
-    </form>
+        <span class="fontStyle">Already have an account? <a class="link" href="../login/login.html">Login</a></span>
+        <!--<button type="submit">Login</button>-->
+    <!--</form>-->
 </div>
 
 </body>
