--- a/view/register/register.html
+++ b/view/register/register.html
@@ -64,7 +64,7 @@
         <button type="submit" id="register">Register</button>
 
         <br>
-        <span class="fontStyle">Already have an account? <a class="link" href="../login/login.html">Login</a></span>
+        <span class="fontStyle">Already have an account? <a class="link" href="../login/login.html"><b>Login</b></a></span>
     </form>
 </div>
 
